--- a/McTools.Xrm.Connection/McTools.Xrm.Connection.csproj
+++ b/McTools.Xrm.Connection/McTools.Xrm.Connection.csproj
@@ -166,6 +166,7 @@
       <DependentUpon>PasswordRequestDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="MetadataCache.cs" />
+    <Compile Include="MetadataCacheContractResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\AutoRefreshSecurityToken.cs" />
     <Compile Include="Utils\ManagedTokenDiscoveryServiceProxy.cs" />
