--- a/McTools.Xrm.Connection/packages.config
+++ b/McTools.Xrm.Connection/packages.config
@@ -4,7 +4,7 @@
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.42" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.34" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.42" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.0.108" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.0.110" targetFramework="net48" />
   <package id="Microsoft.IdentityModel" version="7.0.0" targetFramework="net462" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.9" targetFramework="net462" />
   <package id="Microsoft.NETCore.Platforms" version="6.0.3" targetFramework="net48" />
@@ -12,17 +12,19 @@
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.24" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
+  <package id="System.IO" version="4.3.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net462" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Private.Uri" version="4.3.2" targetFramework="net462" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" requireReinstallation="true" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net48" />
-  <package id="System.Text.Json" version="6.0.3" targetFramework="net48" />
+  <package id="System.Text.Json" version="6.0.4" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" requireReinstallation="true" />
 </packages>
