--- a/McTools.Xrm.Connection/McTools.Xrm.Connection.csproj
+++ b/McTools.Xrm.Connection/McTools.Xrm.Connection.csproj
@@ -94,6 +94,7 @@
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Drawing.Design" />
     <Reference Include="System.IdentityModel" />
     <Reference Include="System.Net" />
     <Reference Include="System.Net.Http.WebRequest" />
@@ -113,8 +114,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppCode\HighlightingExpandConverter.cs" />
     <Compile Include="AppCode\ImpersonationEventArgs.cs" />
+    <Compile Include="AppCode\PropertySorter.cs" />
     <Compile Include="ConnectionDetail.cs" />
+    <Compile Include="ConnectionFile.cs" />
     <Compile Include="ConnectionManager.cs" />
     <Compile Include="ConnectionsList.cs" />
     <Compile Include="CrmConnections.cs" />
