--- a/McTools.Xrm.Connection/McTools.Xrm.Connection.csproj
+++ b/McTools.Xrm.Connection/McTools.Xrm.Connection.csproj
@@ -127,6 +127,7 @@
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Drawing.Design" />
     <Reference Include="System.IdentityModel" />
     <Reference Include="System.IO, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IO.4.3.0\lib\net462\System.IO.dll</HintPath>
@@ -192,8 +193,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppCode\HighlightingExpandConverter.cs" />
     <Compile Include="AppCode\ImpersonationEventArgs.cs" />
+    <Compile Include="AppCode\PropertySorter.cs" />
     <Compile Include="ConnectionDetail.cs" />
+    <Compile Include="ConnectionFile.cs" />
     <Compile Include="ConnectionManager.cs" />
     <Compile Include="ConnectionsList.cs" />
     <Compile Include="CrmConnections.cs" />
