--- a/McTools.Xrm.Connection.WinForms/McTools.Xrm.Connection.WinForms.csproj
+++ b/McTools.Xrm.Connection.WinForms/McTools.Xrm.Connection.WinForms.csproj
@@ -681,6 +681,9 @@
   <ItemGroup>
     <None Include="Resources\Theme32.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Size32.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
