--- a/McTools.Xrm.Connection.WinForms/McTools.Xrm.Connection.WinForms.csproj
+++ b/McTools.Xrm.Connection.WinForms/McTools.Xrm.Connection.WinForms.csproj
@@ -690,6 +690,9 @@
   <ItemGroup>
     <None Include="Resources\Dynamics365_64.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Settings24.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
