Allow loading connection list from external assembly

--- a/McTools.Xrm.Connection.TestWinForm/McTools.Xrm.Connection.TestWinForm.csproj
+++ b/McTools.Xrm.Connection.TestWinForm/McTools.Xrm.Connection.TestWinForm.csproj
@@ -200,6 +200,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CrmConnectionProvider.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
