--- a/McTools.Xrm.Connection/McTools.Xrm.Connection.csproj
+++ b/McTools.Xrm.Connection/McTools.Xrm.Connection.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Forms\PasswordRequestDialog.Designer.cs">
       <DependentUpon>PasswordRequestDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="ICrmConnectionsProvider.cs" />
     <Compile Include="MetadataCache.cs" />
     <Compile Include="MetadataCacheContractResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
